plugins/mermaid/testData/intention/gitgraph/merge_same_heads.mermaid
gitGraph
  commit
  branch testBranch
  checkout main
  merge <error descr="Branches 'testBranch' and 'main' have the same head">testBranch</error>